# rust_reversi_core

./: Cargo.toml  README.md
.github/workflows/: publish.yaml
benches/: board.rs  search.rs
src/: board.rs  lib.rs  v8di.rs
src/arena/: core.rs  local.rs  mod.rs  network.rs
src/search/: alpha_beta.rs  evaluator.rs  mcts.rs  mod.rs  nega_scout.rs  thunder.rs  winrate_evaluator.rs
src/utils/: mod.rs  stack_vec.rs
tests/: arena_tests.rs  board_tests.rs  search_test.rs
tests/players/: matrix_player.rs  mod.rs  piece_player.rs  random_player.rs  slow_player.rs
