[package]
name = "rust_reversi_core"
version = "0.1.8"
edition = "2021"
authors = ["neodymium6"]
license = "MIT"
description = "A Rust library for the game of Reversi including AI players and arena for playing games."
repository = "https://github.com/neodymium6/rust_reversi_core"
keywords = ["game", "reversi", "othello", "ai"]
categories = ["games"]

[dependencies]
rand = "0.8.5"
indicatif = "0.17.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "random_player"
path = "tests/players/random_player.rs"

[[bin]]
name = "slow_player"
path = "tests/players/slow_player.rs"

[[bin]]
name = "piece_player"
path = "tests/players/piece_player.rs"

[[bin]]
name = "matrix_player"
path = "tests/players/matrix_player.rs"

[[bench]]
name = "board"
harness = false

[[bench]]
name = "search"
harness = false

